# engy-5050

./: .gitignore  README.md  pyproject.toml
notebooks/: 08-critical-bare-fuel-slab.ipynb  09-critical-reflected-fuel-slab.ipynb
