[project]
name = "jupynb-repo"
version = "0.1.0"
description = "GitHub repo part of the CT-500 course in Cortix Tech"
readme = "README.md"
authors = [{ name = "Valmor F. de Almeida", email = "dealmeidavf@cortix.tech" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "pyvista>=0.47.0",
    "scipy>=1.17.0",
]

[tool.uv]
# Make it explicit this repo is not an installable package.
package = false

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.3",
]
